@@ -30,6 +30,13 @@ importFrom(e1071,svm)
 importFrom(earth,earth)
 importFrom(gbm,gbm)
 importFrom(gplots,heatmap.2)
+importFrom(grDevices,heat.colors)
+importFrom(grDevices,is.raster)
+importFrom(grDevices,rainbow)
+importFrom(grDevices,terrain.colors)
+importFrom(graphics,arrows)
+importFrom(graphics,barplot)
+importFrom(graphics,legend)
 importFrom(mgcv,gam)
 importFrom(mgcv,gam.control)
 importFrom(nnet,nnet)
@@ -103,3 +110,16 @@ importFrom(sp,SpatialPolygons)
 importFrom(sp,bbox)
 importFrom(sp,spplot)
 importFrom(spThin,thin)
+importFrom(stats,aggregate.data.frame)
+importFrom(stats,cor)
+importFrom(stats,glm)
+importFrom(stats,glm.control)
+importFrom(stats,rbinom)
+importFrom(stats,runif)
+importFrom(stats,sd)
+importFrom(stats,var)
+importFrom(utils,lsf.str)
+importFrom(utils,read.csv)
+importFrom(utils,read.csv2)
+importFrom(utils,tail)
+importFrom(utils,write.csv)
