@@ -243,6 +243,7 @@ correlation matrix and variable importance).
  be more or less time- and memory-consuming.
 }
 \examples{
+\dontrun{
 # Loading data
 data(Env)
 data(Occurrences)
@@ -254,7 +255,6 @@ ESDM = ensemble_modelling(c('CTA', 'MARS'), Occurrences, Env, rep = 1,
                           ensemble.thresh = c(0.6))
 
 # Results plotting
-\dontrun{
 plot(ESDM)
 }
 }
