@@ -1,3 +1,4 @@
+SSDM 0.1.9020 CRAN first submit changes
 SSDM 0.1.9019 Occurrences man url corrected
               Check -as--cran
               Check on CRAN win-build
